tests/sksl/errors/VectorIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'half4'
error: 6: index 4 out of range for 'half4'
error: 7: index 1000000000 out of range for 'half4'
error: 9: index -1 out of range for 'half3'
error: 13: index 3 out of range for 'half3'
error: 14: index 4 out of range for 'half3'
error: 15: index 1000000000 out of range for 'half3'
error: 17: index -1 out of range for 'half2'
error: 20: index 2 out of range for 'half2'
error: 21: index 3 out of range for 'half2'
error: 22: index 4 out of range for 'half2'
error: 23: index 1000000000 out of range for 'half2'
error: 25: index -1 out of range for 'half2x4'
error: 28: index 2 out of range for 'half2x4'
error: 29: index 3 out of range for 'half2x4'
error: 30: index 4 out of range for 'half2x4'
error: 31: index 1000000000 out of range for 'half2x4'
error: 33: index -1 out of range for 'half3x3'
error: 37: index 3 out of range for 'half3x3'
error: 38: index 4 out of range for 'half3x3'
error: 39: index 1000000000 out of range for 'half3x3'
error: 41: index -1 out of range for 'half4x2'
error: 46: index 4 out of range for 'half4x2'
error: 47: index 1000000000 out of range for 'half4x2'
error: 49: index -1 out of range for 'half2'
error: 52: index 2 out of range for 'half2'
error: 53: index 1000000000 out of range for 'half2'
error: 55: index -1 out of range for 'half3'
error: 59: index 3 out of range for 'half3'
error: 60: index 1000000000 out of range for 'half3'
error: 62: index -1 out of range for 'half4'
error: 67: index 4 out of range for 'half4'
error: 68: index 1000000000 out of range for 'half4'
33 errors
